--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,13 +1,141 @@
-<!--index.wxml-->
-<view class="container">
-  <view class="userinfo">
-    <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo"> 获取头像昵称 </button>
-    <block wx:else>
-      <image bindtap="bindViewTap" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" mode="cover"></image>
-      <text class="userinfo-nickname">{{userInfo.nickName}}</text>
-    </block>
-  </view>
-  <view class="usermotto">
-    <text class="user-motto">{{motto}}</text>
+<HdView/>
+
+<view class="banner">
+  <swiper indicator-dots indicator-color="rgba(255, 255, 255, 0.5)" indicator-active-color="#fff" circular autoplay interval="4000">
+    <swiper-item><image src="/images/banner1.jpg"></image></swiper-item>
+    <swiper-item><image src="/images/banner2.jpg"></image></swiper-item>
+    <swiper-item><image src="/images/banner3.jpg"></image></swiper-item>
+  </swiper>
+</view>
+
+<scroll-view class="major" scroll-x>
+  <navigator class="box" url="/pages/ps/ps">
+    <image class="pic" src="/images/kecheng1.png"></image>
+    <view class="txt">平面设计</view>
+  </navigator>
+
+  <navigator class="box" url="">
+    <image class="pic" src="/images/kecheng2.png"></image>
+    <view class="txt">室内设计</view>
+  </navigator>
+
+  <navigator class="box" url="">
+    <image class="pic" src="/images/kecheng3.png"></image>
+    <view class="txt">UI设计</view>
+  </navigator>
+
+  <navigator class="box" url="">
+    <image class="pic" src="/images/kecheng4.png"></image>
+    <view class="txt">影视后期</view>
+  </navigator>
+
+  <navigator class="box" url="">
+    <image class="pic" src="/images/kecheng5.png"></image>
+    <view class="txt">Web前端</view>
+  </navigator>
+</scroll-view>
+
+<view class="works">
+  <view class="container">
+    <PubTitle myTitle="学员作品" myUrl="/pages/works/works"/>
+
+    <view class="wkMain">
+      <navigator class="box">
+        <image class="pic" src="/images/xszp1.jpg"></image>
+        <view class="ceng">
+          <view class="tit">UI设计作品</view>
+          <view class="line"></view>
+          <view class="des">UI Design Works</view>
+        </view>
+      </navigator>
+
+      <navigator class="box">
+        <image class="pic" src="/images/xszp2.jpg"></image>
+        <view class="ceng">
+          <view class="tit">平面设计作品</view>
+          <view class="line"></view>
+          <view class="des">Graphic Design Works</view>
+        </view>
+      </navigator>
+
+      <navigator class="box">
+        <image class="pic" src="/images/xszp3.jpg"></image>
+        <view class="ceng">
+          <view class="tit">电商设计作品</view>
+          <view class="line"></view>
+          <view class="des">Electric Business Works</view>
+        </view>
+      </navigator>
+
+      <navigator class="box">
+        <image class="pic" src="/images/xszp4.jpg"></image>
+        <view class="ceng">
+          <view class="tit">室内设计作品</view>
+          <view class="line"></view>
+          <view class="des">Interior Design Works</view>
+        </view>
+      </navigator>
+
+      <navigator class="box">
+        <image class="pic" src="/images/xszp5.jpg"></image>
+        <view class="ceng">
+          <view class="tit">影视后期作品</view>
+          <view class="line"></view>
+          <view class="des">Film Television Works</view>
+        </view>
+      </navigator>
+
+      <navigator class="box">
+        <image class="pic" src="/images/xszp6.jpg"></image>
+        <view class="ceng">
+          <view class="tit">三维仿真作品</view>
+          <view class="line"></view>
+          <view class="des">3D Simulation Works</view>
+        </view>
+      </navigator>
+
+      <navigator class="box">
+        <image class="pic" src="/images/xszp7.jpg"></image>
+        <view class="ceng">
+          <view class="tit">Web前端作品</view>
+          <view class="line"></view>
+          <view class="des">Web Front End Works</view>
+        </view>
+      </navigator>
+
+      <navigator class="box">
+        <image class="pic" src="/images/xszp8.jpg"></image>
+        <view class="ceng">
+          <view class="tit">建筑景观作品</view>
+          <view class="line"></view>
+          <view class="des">Architectural Design</view>
+        </view>
+      </navigator>
+    </view>
   </view>
 </view>
+
+<view class="dynamic">
+  <view class="container">
+    <PubTitle myTitle="行业动态" myUrl="/pages/dynamic/dynamic"/>
+    <view class="dyMain">
+      <navigator class="dyItem" wx:for="{{dataList}}" wx:key="index">
+        <view class="pic">
+          <image src="{{item.picurl}}"></image>
+        </view>
+        <view class="txt">
+          <view class="title">
+            {{item.title}}
+          </view>
+          <view class="info">
+            <text>作者：</text> {{item.author}}
+            <text space="ensp"> - </text>
+            <text>时间：</text> {{item.posttime}}
+          </view>
+        </view>
+      </navigator>
+    </view>
+  </view>
+</view>
+
+<FtView/>
